feat: 6.3 impl getChats and getChatHistory all layers with tests
